--- a/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
@@ -25,7 +25,7 @@ dall'utente.}
 \DefinizioneGlossario{Capacità di un prodotto software di facilitare la diagnosi sul software, individuando la causa di errori o malfunzionamenti qualora presenti.}
 
 \TermineGlossario{Android}
-\DefinizioneGlossario{Android è un sistema operativo per dispositivi mobili sviluppato da Google, progettato principalmente per sistemi embedded quali smartphone e tablet, con interfacce utente specializzate per televisori, automobili, orologi da polso, occhiali, e altri.E' basato sul kernel Linux.}
+\DefinizioneGlossario{Android è un sistema operativo per dispositivi mobili sviluppato da Google, progettato principalmente per sistemi embedded quali smartphone e tablet, con interfacce utente specializzate per televisori, automobili, orologi da polso, occhiali, e altri.È basato sul kernel Linux.}
 
 
 \TermineGlossario{Apache tomcat}
