--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/TabellaRischi.tex
@@ -52,7 +52,7 @@ Di seguito viene riportata in forma tabellare un elenco di tutti i potenziali ri
         Impegni personali regolari. &
         alta &
         bassa &
-        E' stato creato un documento condiviso contenente una tabella in cui ogni membro del gruppo segna i giorni ed orari in cui garantisce la propria disponibilità. &
+        È stato creato un documento condiviso contenente una tabella in cui ogni membro del gruppo segna i giorni ed orari in cui garantisce la propria disponibilità. &
         Ci si impegna ad organizzare il lavoro e specialmente gli incontri concordantemente agli impegni di tutti. \\
         \hline
         RPb &
