--- a/DocumentiInterni/NormeDiProgetto/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/main.tex
@@ -4,6 +4,7 @@
 \usepackage{csquotes}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{lmodern}
 \input{./src/Comandi.tex}
 \DeclareUnicodeCharacter{2212}{-}
 
