--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -5,7 +5,7 @@ Il gruppo ha scelto di utilizzare la convenzione CamelCase con, in aggiunta, le 
 	\item i nomi composti di file o cartelle verranno scritti uniti, lasciando le iniziali delle relative parole maiuscole;
 	\item i nomi dei documenti utilizzeranno la seguente nomenclatura:
 	\begin{center}
-	\textbf{NomeDelFile\_v.X.Y.Z}
+	\textbf{Nome Del File\_v.X.Y.Z}
 	\end{center}
 	dove X, Y e Z indicano la versione del documento;
 \end{itemize}
@@ -23,7 +23,7 @@ Tutti gli elenchi puntati nelle documentazioni prodotte dal gruppo {\Gruppo} ris
 Per eliminare ambiguità linguistiche e formattare automaticamente le parole chiavi più importanti, è stato creato un glossario in \LaTeX{} con nomenclatura nomegruppo.sty.
 
 \subsubsection{Sigle}
-In tutti i documenti prodotti dal gruppo {\Gruppo}, si adotteranno le seguenti sigle per abbreviazione dei nomi più ricorrenti, quali:
+Nei documenti prodotti dal gruppo {\Gruppo}, è possibile adotterre le seguenti sigle per abbreviazione dei nomi più ricorrenti, quali:
 \begin{itemize}
 	\item AdR: indica l’analisi dei requisiti;
 	\item NdP: indica le norme di progetto;
@@ -63,17 +63,17 @@ L’esempio sotto riportato riporta una tabella costruita secondo le disposizion
 }
 
 \subsubsection{Immagini}
-Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate seguendo un'organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente:
-\textbf{N\_nn\_\#\_nomeimg.estensione}\\
-dove:
-\begin{itemize}
-	\item N indicherà la sezione dove verrà inserita l’immagine;
-	\item n indicherà la sottosezione dove verrà inserita l’immagine;
-	\item \# indicherà un numero intero naturale progressivo, che sarà l’indice dell’immagine;
-	\item nomeimg indicherà il nome proprio dell’immagine;
-	\item estensione indicherà il formato dell’immagine (ex: jpg, png…).
-\end{itemize}
-Ogni immagine, in aggiunta, sarà correlata da una breve descrizione della stessa, posizionata in centro pagina.
+%Tutte le immagini utilizzate durante la stesura della documentazione, dovranno essere collocate seguendo un'organizzazione gerarchica all’interno delle cartelle e sottocartelle della documentazione. In particolare, ogni immagine sarà salvata dentro la specifica cartella del documento a cui appartiene. Un esempio di nomenclatura utilizzata per le immagini sarà la seguente:
+%\textbf{N\_nn\_\#\_nomeimg.estensione}\\
+%dove:
+%\begin{itemize}
+%	\item N indicherà la sezione dove verrà inserita l’immagine;
+%	\item n indicherà la sottosezione dove verrà inserita l’immagine;
+%	\item \# indicherà un numero intero naturale progressivo, che sarà l’indice dell’immagine;
+%	\item nomeimg indicherà il nome proprio dell’immagine;
+%	\item estensione indicherà il formato dell’immagine (ex: jpg, png…).
+%\end{itemize}
+Ogni immagine, sarà correlata da una breve descrizione della stessa, posizionata in centro pagina.
 
 \subsubsection{Diagrammi \glo{UML}}
 Ogni diagramma \glo{UML} inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi \glo{UML} sarà Draw.IO.
