--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/StrutturaDellaDocumentazione.tex
@@ -45,7 +45,7 @@ ciascuna, una breve descrizione ed il numero della pagina dove è collocata.
 La struttura delle pagine di contenuto è la seguente:
 \begin{itemize}
 	\item logo: il logo del gruppo è posizionato in alto a sinistra;
-	\item sezione: il nome ed il numero della sezione sono posizionati in centro alla pagina;
+	\item sezione: il nome ed il numero della sezione sono posizionati in alto a destra;
 	\item intestazione: è composta dal logo e dalla sezione;
 	\item contenuto: il contenuto principale del documento è posizionato dopo l’intestazione dello stesso;
 	\item nome e versione del documento: presente in basso a sinistra, indica appunto il nome del documento in oggetto e la sua attuale versione di scrittura;
