--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiInfrastruttura.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiInfrastruttura.tex
@@ -37,11 +37,15 @@ Per le comunicazioni rapide ed eventuali discussioni o proposte esterne alle riu
 
 \textbf{Comunicazioni esterne al gruppo}
 
-/*Da stabilire con l'azienda ed eventualmente il professore in seguito all'assegnazione del capitolato.*/
-
+I canali di comunicazione con il proponente sono:
+\begin{itemize}
+    \item GoogleMeet: per i meeting; 
+    \item Telegram: per comunicazioni rapide e/o urgenti;
+    \item email: per comunicazioni ufficiali e che richiedono un certo livello di sicurezza.
+\end{itemize}
 \myparagraph{Controllo delle versioni, issue tracking system e memorizzazione remota condivisa}
 
-Per il controllo delle versioni del prodotto sviluppato e la possibilità di memorizzare documenti in una repository remota verrà utilizzato GitHub (si rimanda all'apposita sezione "Classificazione dei documenti" [sez 3.3] nei processi di supporto).
+Per il controllo delle versioni del prodotto sviluppato e la possibilità di memorizzare documenti in una repository remota verrà utilizzato GitLab (si rimanda all'apposita sezione "Classificazione dei documenti" [sez 3.3] nei processi di supporto).
 
 \subsubsection{Manutenzione dell'infrastruttura}
 L'infrastruttura deve essere mantenuta, monitorata e modificata se necessario per poter mantenere il requisito di appagamento dei requisiti del processo. Ciò deve dunque includere una definizione del grado di gestione della configurazione.
