--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiPerfezionamento.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiPerfezionamento.tex
@@ -31,9 +31,9 @@ Il grado di rischio delle Epic prevede 5 livelli:
     \item[\textbf{1.}] Lowest: non sono presenti valori critici e almeno uno dei tre parametri di valutazione del rischio presenta il valore favorevole.
 \end{enumerate}
 
-Si consiglia di pianificare le attività di progetto in modo tale da mantenere un valore medio di rischio per ogni task. La codifica di rischio nelle epic va aggiornata in accordo con i criteri precedentemente presentati. Qualora venisse raggiunto un grado di rischio superiore al medio si prospetta un'analisi più accurata della situazione con annessi eventuali modifiche al piano relativo a tale task.
+Le attività di progetto vengono pianificate dal \responsabile{} insieme al team nelle riunioni, in modo tale da avere e mantenere un valore di rischio minore o uguale a medio per ogni task. La codifica di rischio nelle epic va aggiornata in accordo con i criteri precedentemente presentati. Qualora venisse raggiunto un grado di rischio superiore al medio si prospetta un'analisi più accurata della situazione con annessi eventuali modifiche al piano relativo a tale task.
 
-\myparagraph{Controllo}Il team deve pianificare ed eseguire revisioni periodiche dei processi per assicurarsi che l'adeguatezza ed efficacia dei processi in questione rimanga tale nell'ottica dei risultati dei risultati delle valutazioni.
+\myparagraph{Controllo}Il \responsabile{} del team deve pianificare ed eseguire revisioni periodiche dei processi per assicurarsi che l'adeguatezza ed efficacia dei processi in questione rimanga tale nell'ottica degli obiettivi fissati.
 
 \subsubsection{Miglioramento del processo}
 
