--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/main.tex
@@ -3,3 +3,5 @@
 
 \subsection{Sviluppo}\label{sec:Sviluppo}
 \input{src/ProcessiPrimari/src/Sviluppo/main.tex}
+\subsection{Strumenti}\label{sec:Strumenti}
+\input{./src/ProcessiPrimari/src/Strumenti/main.tex}
