--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneRequisiti.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneRequisiti.tex
@@ -1,7 +1,7 @@
 Tutti i requisiti individuati dagli analisti devono essere univocamente identificati secondo il seguente schema identificativo:
 
 \begin{center}
-    \textbf{R[Priorit\`{a}]-[Tipologia]-[Identificativo]}
+    \textbf{R[Identificativo]-[Tipologia]-[Priorit\`{a}]}
 \end{center}
 
 Dove:
