--- a/DocumentiInterni/NormeDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/RegistroModifiche.tex
@@ -13,17 +13,17 @@
     % usare \responsabile per indicare responsabile
 
     %		L'ultimo evento deve essere sempre all'inizio della tabella
-    1.0.0                  & 2021-01-5                                        & Approvazione documento                      & Elvis Murtezan      & \responsabile{} \\
+    1.0.0                  & 2021-01-5                                        & Approvazione               & Elvis Murtezan      & \responsabile{} \\
 
-    0.1.0                  & 2020-12-22                                       & Verifica completa documento                 & Giovanni Grigoletto, Andrea De Tomasi, Abdelwahad Kandoul  & \verificatore{} \\
+    0.1.0                  & 2020-12-22                                       & Verifica             & Giovanni Grigoletto, Andrea De Tomasi, Abdelwahad Kandoul  & \verificatore{} \\
 
-    0.0.4               & 2020-12-14    & stesura §4 & Alessio Trevisan & \redattore{} \\
+    0.0.4               & 2020-12-14    & stesura §4 & Alessio Trevisan & \amministratore {} \\
 
-    0.0.3               & 2020-12-10    & stesura §3 & Edoardo Caregnato & \redattore{} \\
+    0.0.3               & 2020-12-10    & stesura §3 & Edoardo Caregnato & \amministratore {} \\
 
-    0.0.2               & 2020-12-9    & stesura §2 & Filippo Pinton & \redattore{} \\
+    0.0.2               & 2020-12-9    & stesura §2 & Filippo Pinton & \amministratore {} \\
 
-    0.0.1               & 2020-12-7    & stesura §1 & Filippo Pinton & \redattore{} \\
+    0.0.1               & 2020-12-7    & stesura §1 & Filippo Pinton & \amministratore {} \\
 
 
 
