--- a/DocumentiInterni/Verbali/Verbale_2020_12_11/src/DettaglioRiunione/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_2020_12_11/src/DettaglioRiunione/main.tex
@@ -13,7 +13,7 @@ Successivamente il gruppo ha deciso anche chi dovrà verificare i documenti comp
 La compilazione dei documenti dovrà essere conclusa non oltre \textbf{2021-01-04} e la verifica di tale documentazione dovrà essere conclusa non oltre  \textbf{2021-01-08}.\\
 Successivamente il gruppo ha deciso una data per la verifica dei documenti compilati precedentemente quali \textbf{studio di fattibilità} e parte delle \textbf{norme di progetto} e la data è \textbf{2020-12-22}.\\
 Durante la riunione \`{e} stato fatto notare che GitHub e Jira non sono stati utilizzati in modo adeguato ed \`{e} stato mostrato in che modo utilizzarli, per poter lavorare correttamente in futuro. Inoltre \`{e} stato ricordato di tenere traccia delle ore di lavoro. \\
-E' stato concordato di prendere appuntamento con il proponente per chiarire eventuali dubbi e sarà Alessio Trevisan ad avere questo incarico. \\ 
+È stato concordato di prendere appuntamento con il proponente per chiarire eventuali dubbi e sarà Alessio Trevisan ad avere questo incarico. \\ 
 Il prossimo meeting del gruppo sarà il \textbf{2020-12-22}.
 
 
