--- a/DocumentiInterni/Verbali/Verbale_I_2020-12-22/src/DettaglioRiunione/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2020-12-22/src/DettaglioRiunione/main.tex
@@ -9,7 +9,7 @@ Si è quindi deciso che dopo la conclusione di tutte le revisioni si debba fare 
 sulla Pull Request nella piattaforma GitHub, in modo da procedere con la verifica e la modifica delle parti errate del documento.
 
 È stata successivamente fatta una nota ad Edoardo Caregnato per aver segnato come verificato il documento a lui assegnato per la verifica, quando invece doveva essere
-ancora modificato dopo le segnalazioni di errori. E' stato quindi spiegato come si devono eseguire le modifiche dei documenti validati in attesa di modifiche.
+ancora modificato dopo le segnalazioni di errori. È stato quindi spiegato come si devono eseguire le modifiche dei documenti validati in attesa di modifiche.
 
 Infine si è discusso di come si effettuerà la rotazione dei ruoli di stesura, verificazione, approvazione dei documenti, e si è stabilito che ci sarà un responsabile
 fisso per ogni periodo di tempo tra due revisioni. In questo modo si avrà una rotazione puù efficiente dei ruoli.
