--- a/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/DettaglioRiunione/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/DettaglioRiunione/main.tex
@@ -2,8 +2,8 @@ Si è aperta la riunione facendo notare come i deliverables non ancora completi 
 
 La discussione si è poi incentrata sul come velocizzare la validazione dei deliverables mancati.
 
-E' stato discussa l'hardware RFID da richiedere e le relative modalità.
+È stato discussa l'hardware RFID da richiedere e le relative modalità.
 
-E' stato discussa brevemente come sarà pianificata la fase successiva di progettazione.
+È stato discussa brevemente come sarà pianificata la fase successiva di progettazione.
 
 %Infine è stata ripresa la discussione sullo stato dei lavori ed il team ha concordato un meeting
