--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/OccorrenzaRischi.tex
@@ -40,12 +40,12 @@ Di seguito viene stilata una tabella parziale, soggetta ad aggiornamenti progres
         ROb & 
         1 & 
         alta &
-        Strumenti di monitoraggio importanti pre-concordati, quali ad esempio \glo{Jira}, non sono stati fin da subito usati regolarmente da tutti i membri del gruppo. E' stato fatto presente incitando all'osservanza delle regole e tutti i membri si sono impegnati a seguirle con maggiore accortezza.\\
+        Strumenti di monitoraggio importanti pre-concordati, quali ad esempio \glo{Jira}, non sono stati fin da subito usati regolarmente da tutti i membri del gruppo. È stato fatto presente incitando all'osservanza delle regole e tutti i membri si sono impegnati a seguirle con maggiore accortezza.\\
         \hline
         ROd & 
         1 & 
         media &
-        In qualche caso la redazone di alcuni documenti si è protratta oltre il tempo prestabilito per ultimare gli stessi, ritardando così i tempi per la loro validazione. Fortunatamente i ritardi non sono stati eccessivi e si è riusciti ugualmente a completare i lavori entro i tempi stabiliti, senza particolari complicazioni. E' stato in ogni caso fatto presente tra i membri del gruppo.\\
+        In qualche caso la redazone di alcuni documenti si è protratta oltre il tempo prestabilito per ultimare gli stessi, ritardando così i tempi per la loro validazione. Fortunatamente i ritardi non sono stati eccessivi e si è riusciti ugualmente a completare i lavori entro i tempi stabiliti, senza particolari complicazioni. È stato in ogni caso fatto presente tra i membri del gruppo.\\
         \hline
     \end{longtable}
 }
