--- a/DocumentiInterni/NormeDiProgetto/src/Introduzione/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/Introduzione/main.tex
@@ -8,7 +8,7 @@ Lo scopo del prodotto è quello di realizzare un’applicazione in grado di segn
 dedicato la presenza di un utente su una determinata postazione e controllare in ogni momento
 se questa è libera, disabilitata, occupata, prenotata oppure da pulire. L’applicazione dovrà essere
 installata in uno smartphone \glo{Android} e dovrà poter essere utilizzata impiegando
-dei tag \glo{RFID}.
+dei tag \glo{RFID}.L'amministratore di sistema avrà accesso ad una \glo{UI} per gestire le tali postazioni in modo semplice.
 
 \subsection{Glossario}
 Al fine di evitare ambiguità fra i termini, e per avere chiare fra tutti gli stakeholder le terminologie utilizzate per la realizzazione del presente documento, il gruppo \Gruppo{} ha redatto un documento denominato \Gv{}.
@@ -24,8 +24,13 @@ Un termine presente nel \Gv{} e utilizzato in questo documento viene indicato co
 
 \subsubsection{Informativi}
 \begin{itemize}
-	\item \textbf{\LaTeX:} \url{https://www.latex-project.org/help/documentation/}
-	\item \textbf{Jira:} \url{https://www.atlassian.com/it/software/jira}
-	\item \textbf{GitHub:} \url{https://github.com/}
-	\item \textbf{GitKraken:} \url{https://www.gitkraken.com/}
+	\item \PdPv{}
+	\item \PdQv{}
+	\item \href{https://www.math.unipd.it/~tullio/IS-1/2020/Dispense/L05.pdf}{Slide L05 del corso Ingegneria del Software - Ciclo di vita del software}
+	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20Use%20Case_4x4.pdf}{Slide dei casi d'uso}
+	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20delle%20Classi_4x4.pdf}{Slide dei diagrammi delle classi}
+	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20di%20Sequenza_4x4.pdf}{Slide dei diagrammi di sequenza}
+	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20di%20Attivit%c3%a0_4x4.pdf}{Slide dei diagrammi delle attività}
+	\item \href{https://www.math.unipd.it/~rcardin/swea/2021/Diagrammi%20dei%20Package_4x4.pdf}{Slide dei diagrammi dei package}
+	%devono essere specifici non intero sito o argomento
 \end{itemize}
