--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiAmministrazione.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiOrganizzativi/src/ProcessoDiAmministrazione.tex
@@ -24,11 +24,11 @@ Riportiamo in seguito le attività che il progetto richiede e i corrispondenti s
 
 \textbf{Assegnazione delle mansioni, pianificazione delle scadenze e stima dei costi}
 
-Per l'assegnazione dei task (con annessa data di scadenza) e per la stima dei costi verrà utilizzato  Atlassian Jira,un software per il monitoraggio di ticket e progetti, il quale permette di assegnare specifici task con la relativa scadenza e preventivo orario a ciascun membro del gruppo tramite l'utilizzo di epic. Inoltre è possibile commentare le varie epic e visualizzare le scadenze e lo stato di avanzamento del task sulla project board. Jira inoltre consente l'integrazione con GitHub.
+Per l'assegnazione dei task (con annessa data di scadenza) e per la stima dei costi verrà utilizzato  Atlassian Jira,un software per il monitoraggio di ticket e progetti, il quale permette di assegnare specifici task con la relativa scadenza e preventivo orario a ciascun membro del gruppo tramite l'utilizzo di epic. Inoltre è possibile commentare le varie epic e visualizzare le scadenze e lo stato di avanzamento del task sulla project board. Jira inoltre consente l'integrazione con GitLab.
 
 \textbf{Testing e controllo della qualità}
 
-Per la fase di testing, continuous integration e per il controllo della qualità del codice prodotto verranno utilizzati \glo{SonarQube} (tramite sonarcloud https://sonarcloud.io/explore/projects), coveralls (https://coveralls.io/) e GitHub Actions . Tali strumenti consentono di lavorare seguendo la pratica di CI, associando al codice prodotto la copertura effettiva dei test associati e altre  statistiche utili per lo sviluppo del codice.
+Per la fase di testing, continuous integration e per il controllo della qualità del codice prodotto verranno utilizzati \glo{SonarQube} (tramite sonarcloud https://sonarcloud.io/explore/projects), coveralls (https://coveralls.io/) e GitLab Actions . Tali strumenti consentono di lavorare seguendo la pratica di CI, associando al codice prodotto la copertura effettiva dei test associati e altre  statistiche utili per lo sviluppo del codice.
 
 \subsubsection{Esecuzione e controllo}
 Tale fase è regolata dalle seguenti attività:
@@ -57,7 +57,7 @@ Il guadagno è calcolato come differenza tra il costo previsto per lo svolgiment
 \end{center}
 
 
-Per il monitoraggio dell'andamento del processo in corso si farà riferimento alla percentuale di completamento delle  milestones collegate alla repository di GitHub.
+Per il monitoraggio dell'andamento del processo in corso si farà riferimento alla percentuale di completamento delle  milestones collegate alla repository di GitLab.
 
 \subsubsection{Revisione e valutazione}
 Tale fase è organizzata dal responsabile di progetto, il quale deve:
